# AlarmDecoder-IoT

./: .astylerc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  address_info.txt  partitions.4MB.csv  pio_fix_app_address.py  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.stsdk
.github/workflows/: build.yml  release.yml
certs/: README.MD
components/ad2mqtt/: CMakeLists.txt  Kconfig  ad2mqtt.cpp  ad2mqtt.h
components/alarmdecoder-api/: CMakeLists.txt  Kconfig.projbuild  alarmdecoder_api.cpp  alarmdecoder_api.h
components/ftpd/: CMakeLists.txt  Kconfig  ftpd.cpp  ftpd.h
components/otaupdate/: CMakeLists.txt  Kconfig  component.mk  firmware_signature_public_key.pem  ota_util.c  ota_util.cpp  ota_util.h  update_root.pem
components/pushover/: CMakeLists.txt  Kconfig  component.mk  pushover.cpp  pushover.h
components/ser2sock/: CMakeLists.txt  Kconfig  component.mk  ser2sock.cpp  ser2sock.h
components/stsdk/: CMakeLists.txt  caps_alarm.c  caps_battery.c  caps_battery.h  caps_button.c  caps_button.h  caps_carbonMonoxideDetector.c  caps_carbonMonoxideDetector.h  caps_contactSensor.c  caps_contactSensor.h  caps_momentary.c  caps_momentary.h  caps_powerSource.c  caps_powerSource.h  caps_refresh.c  caps_refresh.h  caps_securitySystem.c  caps_securitySystem.h  caps_smokeDetector.c  caps_smokeDetector.h  caps_switch.c  caps_switch.h  caps_tamperAlert.c  caps_tamperAlert.h  component.mk  onboarding_config.json  stsdk_main.c  stsdk_main.cpp  stsdk_main.h
components/twilio/: CMakeLists.txt  Kconfig  component.mk  twilio.c  twilio.cpp  twilio.h  twilio_root.pem
components/usdupdate/: CMakeLists.txt  Kconfig  usdupdate.cpp  usdupdate.h
components/webUI/: CMakeLists.txt  Kconfig  TinyTemplateEngine.cpp  TinyTemplateEngine.h  TinyTemplateEngineFileReader.cpp  TinyTemplateEngineFileReader.h  webUI.cpp  webUI.h
contrib/: README-FLASH-ESP32.md  README-FLASH.md  ad2iot-firmware-load-testing.md  deviceConfigAD2IOTV10.json  esp_eth_phy_lan8720.c.patch  loadtest.py  sdkconfig
contrib/alarmdecoder-simulator/: AlarmDecoder_Log_1.txt  README.MD  alarmdecoder-simulator.js
contrib/configs/: ad2iot.ini
contrib/webUI/: AlarmDecoder.xml  README.md  app.css  app.html  app.js  default.css  index.html
contrib/webUI/flash-drive/: 404.html  README-WWW.md  README.md  alarmdecoder.yaml  app.html  app.js  device_description.xml  index.html
contrib/webUI/flash-drive/www/: app.css  app.js  index.html  swaggerUI.html
data/: README.md  ad2iot.ini
main/: CMakeLists.txt  Kconfig.projbuild  ad2_cli_cmd.c  ad2_cli_cmd.cpp  ad2_cli_cmd.h  ad2_settings.h  ad2_uart_cli.c  ad2_uart_cli.cpp  ad2_uart_cli.h  ad2_utils.c  ad2_utils.cpp  ad2_utils.h  alarmdecoder_main.cpp  alarmdecoder_main.h  alarmdecoder_stsdk_app_esp32.cpp  alarmdecoder_stsdk_app_esp32.h  caps_carbonMonoxideDetector.c  caps_contactSensor.c  caps_refresh.c  caps_securitySystem.c  caps_switch.c  caps_tamperAlert.c  component.mk  device_control.c  device_control.cpp  device_control.h  iot_cli_cmd.c  iot_cli_cmd.h  iot_uart_cli.c  iot_uart_cli.h  ota_util.c  ota_util.h
test/: install_astyle.sh
